...
        moveTo(5.5f, 11f)
        arc(6.5f, 18.5f, 11f, positive = false)
        line(12f, 17.5f, 12f, 21f)
        line(8.5f, 21f, 15.5f, 21f)
    }

    val Board: ImageVector = strokeIcon("voxbox_board") {
        rectangle(3f, 3f, 21f, 16f)
        line(12f, 16f, 12f, 20f)
        line(8f, 20f, 16f, 20f)
        line(7f, 8f, 13f, 8f)
        line(7f, 11.5f, 17f, 11.5f)
    }
...
